styles.css
html,
body {
    scroll-behavior: smooth;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Comic Relief', cursive;
    background-color: #FFF2D7;
    color: #1F2A44;
    line-height: 1.6;
    font-size: 20px;
    margin-left: 10px;
}

h1 {
    margin-bottom: 30px;
    color: #1F2A44;
    margin-top: 50px;
    text-align: center;
    margin-left: auto;
}

h2 {
    margin-bottom: 15px;
    color: #1F2A44;
}

h3 {
    color: #FF9F43;
}

/* Lists */
ul {
    list-style: none;
    margin-left: 30px;
    margin-bottom: 8px;
    padding: 5px;
}

ul li {
    margin-bottom: 8px;
    background-color: #FFF2D7;
    border-radius: 9px;
}

ol {
    list-style: none;
    margin-left: 30px;
    margin-bottom: 15px;
    padding: 5px;
}

ol li {
    margin-bottom: 8px;
    background-color: #FFF2D7;
    border-radius: 9px;
}

ul.disc {
    list-style-type: square;
    margin-left: 40px;
}

/* Header and navigation */
.company-name {
    width: 100%;
    margin-left: 0;
    text-align: center;
}

.company-name img {
    height: 50px;
    margin: 10px auto 0 auto;
    display: block;
}

.header {
    border-radius: 6px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 90px 10px;
    background-color: #1F2A44;
    border-bottom: 2px solid #FF9F43;
    position: sticky;
    left: 0;
    width: calc(100% + 22px);
    height: 140px;
    margin-left: -22px;
    margin-right: -22px;
    top: 0;
    z-index: 999;
    transition: 0.3s;
}

.header img {
    height: 160px;
    margin: 30px 0 0 0;
    margin-bottom: 40px;
    margin-left: 20px;
    display: block;
    align-items: left;
}

.header nav {
    background-color: #1F2A44;
    padding: 10px 0;
    text-align: center;
    display: flex;
    gap: 2rem;
    white-space: nowrap;
    margin-top: 15px;
    font-size: 18px;
    position: sticky;
    top: 0;
    z-index: 1000;
}

/* Dropdown menu */
.dropdown{
    display:none;
    font-size:18px;
    font-family: cursive;
    background:none;
    border:none;
    cursor:pointer;
}

/* Hero section */
.hero {
    height: 90vh;
    display: flex;
    align-items: center;
    padding-left: 8%;
    background: url('Images/HomePageLogo.png') no-repeat center center/cover;
    position: relative;
    color: #fff;
    margin-left: -22px;
    margin-right: -22px;
}

.hero-content h1, .hero-content p {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    text-align: left;
    margin-left: 0;
    color: #1F2A44;
}

/* Services section */
.services {
    padding: 60px 8%;
    margin-left: -22px;
    margin-right: -22px;
    background: url("Images/OurServices.png") no-repeat center center/cover;
    position: relative;
    gap: 40px;
    margin-top: 5px;
}

.section-title {
    color: #1F2A44;
    text-align: center;
    margin-bottom: 50px;
}
.services-card {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 40px;
    border-radius: 10px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    margin-top: 5px;
    text-align: center;
    align-items: center;
}

.services-card .card-text {
    background-color: #fff;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
    text-align: center;
}

.services-card .card-text:hover {
    background-color: #1F2A44;
    color: #efefe8;
    transform: translateY(-10px);
    transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
}

.services img {
    width: 120px;
    height: 120px;
    margin-bottom: 15px;
    display: block;
    align-items: center;
    margin-left: 30%;
}

/* Why Choose Us section */
.Why-grid {
    display: grid;
    background-color: #fff;
    border-radius: 10px;
    grid-template-columns: 2fr 4fr;
    gap: 40px;
    padding: 40px;
    max-width: 130%;
    margin: 30px auto 0 auto;
    width: 100%;
}

.Why-text {
    padding: 20px;
    border-radius: 10px;
}

.section-title2 {
    color: #1F2A44;
    text-align: center;
    margin-top: 100px;

}

.Why-Choose-Hot-Beans ul {
    padding: 20px;
    border-radius: 10px;
    max-width: 400px;
    margin: auto;
    margin-top: 150px;
    margin-left: 7px;
}   

.Why-grid img {
    width: 100%;
    height: auto;
    border-radius: 15px;
    align-items: right;
    margin-left: auto;
    margin-right: auto;
}

.Contact-form {
    display: flex;
    gap: 40px;
    padding: 40px;
}

.section-title3 {
    color: #1F2A44;
    text-align: left;
    margin-top: 30px;
    margin-right: 80px;
}

.Contact-form p {
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
    color: #1F2A44;
    text-align: left;
}

.Contact-form input[type="text"],
.Contact-form input[type="email"],
.Contact-form input,
.Contact-form textarea {
    width: 100%;
    padding: 20px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
    font-family: cursive;
    color: #1F2A44;
}

.contact-form button[type="submit"] {
    background-color: #FF9F43;
    color: #F2F4F7;
    padding: 12px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 18px;
    font-family: cursive;
    transition: background-color 0.3s ease;
}

.contact-form button[type="submit"]:hover {
    background-color: #1F2A44;
    color: #F2F4F7;
}

.Achievements {
    padding: 60px 8%;
    margin-left: -22px;
    margin-right: -22px;
    background: url("Images/ContactBGImg.png") no-repeat center center/cover;
    position: relative;
    gap: 40px;
    margin-top: 5px;
    color: #FF9F43;
}

.Achievements-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 40px;
    border-radius: 10px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease;
    margin-top: 5px;
    text-align: center;
    align-items: center;
}

.Achievements-text, .Achievements-text h2 {
    padding: 0 30px;
    color: #FF9F43;
}
/* ... */

